# Patchwork

./: LICENSE  Patchwork.cabal  Readme.md  stack.yaml
app/: TestDiagrams.hs
src/: Patchwork.hs
src/Patchwork/: Ast.hs  Diagram.hs  Parser.hs
